--- a/steamworks-encrypted-app-ticket/Cargo.toml
+++ b/steamworks-encrypted-app-ticket/Cargo.toml
@@ -8,4 +8,4 @@ steamworks-encrypted-app-ticket-sys = { path = "../steamworks-encrypted-app-tick
 thiserror = "2.0.17"
 
 [dev-dependencies]
-hex-literal = "1.1.0"
+hex = "0.4.3"
