--- a/steamworks-encrypted-app-ticket/Cargo.toml
+++ b/steamworks-encrypted-app-ticket/Cargo.toml
@@ -2,6 +2,11 @@
 name = "steamworks-encrypted-app-ticket"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
+description = "Safe Rust wrapper for decrypting Steam Encrypted App Tickets"
+repository = "https://github.com/curtispuetz/steamworks-encrypted-app-ticket"
+keywords = ["steam", "steamworks", "authentication", "gamedev"]
+categories = ["api-bindings", "game-development", "authentication"]
 
 [dependencies]
 steamworks-encrypted-app-ticket-sys = { path = "../steamworks-encrypted-app-ticket-sys" }
