--- a/steamworks-encrypted-app-ticket/Cargo.toml
+++ b/steamworks-encrypted-app-ticket/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "steamworks-encrypted-app-ticket"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 license = "MIT OR Apache-2.0"
 description = "Safe Rust wrapper for decrypting Steam Encrypted App Tickets"
@@ -10,7 +10,6 @@ categories = ["api-bindings", "game-development", "authentication"]
 
 [dependencies]
 steamworks-encrypted-app-ticket-sys = "0.1.1"
-thiserror = "2.0.17"
 
 [dev-dependencies]
-hex = "0.4.3"
+hex-literal = "1.1.0"
